--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Precrizer
 
 Easy Django code, HTML Template and JavaScript generator
 
-It's work with only 3 parameters
+Precryzer works with only 3 parameters
 * Object fields separated by commas
 * Form Id name
 * Object Django name
